force-app/main/default/objects/OA_AI_Request_Log__c/OA_AI_Request_Log__c.object-meta.xml
<CustomObject>
    <description>Enterprise AI Gateway per-request telemetry (tokens, cost, latency, routing). Written by OA_AI_Gateway.</description>
    <label>OA AI Request Log</label>
    <nameField>
        <displayFormat>AIREQ-{00000}</displayFormat>
        <label>AI Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OA AI Request Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>