force-app/main/default/objects/OA_AI_Request_Log__c/fields/Business_Process__c.field-meta.xml
<CustomField>
    <fullName>Business_Process__c</fullName><label>Business Process</label><type>Text</type><length>120</length><required>false</required>
</CustomField>