force-app/main/default/objects/OA_AI_Request_Log__c/fields/Completion_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Completion_Tokens__c</fullName>
    <label>Completion Tokens</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>