force-app/main/default/objects/OA_AI_Request_Log__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName><label>Estimated Cost (USD)</label><type>Number</type><precision>12</precision><scale>6</scale><required>false</required>
</CustomField>