force-app/main/default/objects/OA_AI_Request_Log__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName><label>Failure Reason</label><type>Text</type><length>255</length><required>false</required>
</CustomField>