force-app/main/default/objects/OA_AI_Request_Log__c/fields/Latency_Ms__c.field-meta.xml
<CustomField>
    <fullName>Latency_Ms__c</fullName>
    <label>Latency Ms</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>