force-app/main/default/objects/OA_AI_Request_Log__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName><label>Model</label><type>Text</type><length>80</length><required>false</required>
</CustomField>