force-app/main/default/objects/OA_AI_Request_Log__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName><label>Provider</label><type>Text</type><length>40</length><required>false</required>
</CustomField>