force-app/main/default/objects/OA_AI_Request_Log__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName><label>Retry Count</label><type>Number</type><precision>3</precision><scale>0</scale><required>false</required>
</CustomField>