force-app/main/default/objects/OA_AI_Request_Log__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName><label>HTTP Status</label><type>Number</type><precision>5</precision><scale>0</scale><required>false</required>
</CustomField>