force-app/main/default/objects/OA_AI_Request_Log__c/fields/Workflow__c.field-meta.xml
<CustomField>
    <fullName>Workflow__c</fullName><label>Workflow</label><type>Text</type><length>80</length><required>false</required>
</CustomField>